tests/e2e/semantics/service_mutation_block.story
a = {"a": 1}
a.get(key: "b")
